--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Titre de la page</title>
 </head>
 <body>
-  <h1>MotorHouse</h1>
+  <h1>MotorHousedazdaz</h1>
   <p>Voici la page d'accueil de MotorHouse</p>
 </body>
 </html>
