--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
-  <title>Titre de la page</title>
+  <title>MotorHouse</title>
 </head>
 <body>
-  <h1>MotorHousedazdaz</h1>
+  <h1>MotorHouse</h1>
   <p>Voici la page d'accueil de MotorHouse</p>
 </body>
 </html>
