--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>MotorHouse</h1>
   <p>Voici la page d'accueil de MotorHouse</p>
-  <a href="pages/nos_voitures.html">Nos occassions</a>
+  <a href="pages/nos_occasions.html">Nos occassions</a>
   <a href="index.html">Acceuil</a>
   <a href="pages/notre_concession.html">Notre concession</a>
   <a href="pages/nos_reprises.html">Reprise</a>
