--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>MotorHouse</title>
 </head>
 <body>
-  <h1>MotorHouse</h1>
-  <p>Voici la page d'accueil de MotorHouse</p>
+<nav>
   <ul>
-    <a href="pages/nos_occasions.html">Nos occassions</a>
-    <a href="index.html">Acceuil</a>
-    <a href="pages/notre_concession.html">Notre concession</a>
-    <a href="pages/nos_reprises.html">Reprise</a>
+    <li><a href="pages/nos_occasions.html">Nos occassions</a></li>
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="pages/notre_concession.html">Notre concession</a></li>
+    <li><a href="pages/nos_reprises.html">Reprises</a></li>
   </ul>
+  
+</nav>
+<h1>MotorHouse</h1>
 </body>
 </html>
