--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -9,6 +9,14 @@
   <title>MotorHouse</title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="pages/nos_reprises.html">Reprises</a></li>
+      <li><a href="pages/nos_occasions.html">Nos occassions</a></li>
+      <li><a href="pages/notre_concession.html">Notre concession</a></li>
+    </ul>
+  </nav>
   <p>Page occassions</p>
 </body>
 </html>
