--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -11,10 +11,10 @@
 <body>
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="pages/nos_reprises.html">Reprises</a></li>
-      <li><a href="pages/nos_occasions.html">Nos occassions</a></li>
-      <li><a href="pages/notre_concession.html">Notre concession</a></li>
+      <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
+      <li><a href="nos_reprises.html">Reprises</a></li>
+      <li><a href="nos_occasions.html">Nos occassions</a></li>
+      <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
   </nav>
   <p>Page occassions</p>
