--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <nav>
   <ul>
-    <li><a href="index.html">Accueil</a></li>
+    <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
     <li><a href="pages/nos_reprises.html">Reprises</a></li>
     <li><a href="pages/nos_occasions.html">Nos occassions</a></li>
     <li><a href="pages/notre_concession.html">Notre concession</a></li>
