--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
 </nav>
 <h1>MotorHouse</h1>
 <img src="images/concessionaire.jpg"/>
+
+<footer>
+  <p>© 2025 Concessionnaire MOTORHOUSE</p>
+  <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
+  <p>Téléphone: 01 23 45 67 89</p>
+  <div class="socials">
+    <a href="https://facebook.com">Facebook</a>
+    <a href="https://twitter.com">Twitter</a>
+  </div>
+</footer>
+
 </body>
 </html>
