--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <div class="socials">
     <a href="https://facebook.com">Facebook</a>
     <a href="https://twitter.com">Twitter</a>
+    <p id="mention">Mentions légales</p>
   </div>
 </footer>
 
