--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
 <h1>MotorHouse</h1>
 <img src="images/concessionaire.jpg"/>
 
-<footer>
-  <p>© 2025 Concessionnaire MOTORHOUSE</p>
-  <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
-  <p>Téléphone: 01 23 45 67 89</p>
-  <div class="socials">
-    <a href="https://facebook.com">Facebook</a>
-    <a href="https://twitter.com">Twitter</a>
-    <p id="mention">Mentions légales</p>
-  </div>
-</footer>
+  <!-- bas de page-->
+  <footer>
+    <p>© 2025 Concessionnaire MOTORHOUSE</p>
+    <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
+    <p>Téléphone: 01 23 45 67 89</p>
+    <div class="socials">
+      <a href="https://facebook.com">Facebook</a>
+      <a href="https://twitter.com">Twitter</a>
+      <p id="mention">Mentions légales</p>
+    </div>
+  </footer>
 
 </body>
 </html>
