--- a/pages/nos_reprises.html
+++ b/pages/nos_reprises.html
@@ -20,6 +20,18 @@
       <li><a href="nos_occasions.html">Nos occassions</a></li>
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
-  </nav>
+  </nav> 
+  <!-- bas de page-->
+  <footer>
+    <p>© 2025 Concessionnaire MOTORHOUSE</p>
+    <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
+    <p>Téléphone: 01 23 45 67 89</p>
+    <div class="socials">
+      <a href="https://facebook.com">Facebook</a>
+      <a href="https://twitter.com">Twitter</a>
+      <p id="mention">Mentions légales</p>
+    </div>
+  </footer>
 </body>
+
 </html>
