--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- bas de page-->
   <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
-    <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
+    <p>Adresse: 13 Rue Alex Jany, Vidailhan</p>
     <p>Téléphone: 01 23 45 67 89</p>
     <div class="socials">
       <a href="https://facebook.com">Facebook</a>
