--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>MotorHouse</title>
 </head>
 <body>
+<img id="logo" href="images/logoPNG.PNG">
 <nav>
   <ul>
     <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
