--- a/pages/nos_reprises.html
+++ b/pages/nos_reprises.html
@@ -21,6 +21,99 @@
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
   </nav> 
+
+
+  <div class="container">
+    <h2>Formulaire de reprise de voiture</h2>
+    <form action="#" method="POST">
+        <!-- Informations du propriétaire -->
+        <label for="nom">Nom et Prénom :</label>
+        <input type="text" id="nom" name="nom" required>
+
+        <label for="email">Adresse e-mail :</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="telephone">Numéro de téléphone :</label>
+        <input type="tel" id="telephone" name="telephone" required>
+
+        <!-- Informations sur le véhicule -->
+        <label for="marque">Marque du véhicule :</label>
+        <input type="text" id="marque" name="marque" required>
+
+        <label for="modele">Modèle du véhicule :</label>
+        <input type="text" id="modele" name="modele" required>
+
+        <label for="annee">Année de mise en circulation :</label>
+        <input type="number" id="annee" name="annee" required>
+
+        <label for="kilometrage">Kilométrage actuel :</label>
+        <input type="number" id="kilometrage" name="kilometrage" required>
+
+        <label for="etat">État du véhicule :</label>
+        <textarea id="etat" name="etat" rows="4" required></textarea>
+
+        <label for="accidents">Avez-vous eu des accidents ?</label>
+        <select id="accidents" name="accidents">
+            <option value="oui">Oui</option>
+            <option value="non">Non</option>
+        </select>
+
+        <label for="prix">Prix souhaité pour la reprise :</label>
+        <input type="number" id="prix" name="prix" required>
+
+        <!-- Consentement -->
+        <label>
+            <input type="checkbox" name="consentement" required> J'accepte les conditions de reprise de voiture
+        </label>
+
+        <input type="submit" value="Envoyer la demande">
+    </form>
+</div><div class="container">
+    <h2>Formulaire de reprise de voiture</h2>
+    <form action="#" method="POST">
+        <!-- Informations du propriétaire -->
+        <label for="nom">Nom et Prénom :</label>
+        <input type="text" id="nom" name="nom" required>
+
+        <label for="email">Adresse e-mail :</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="telephone">Numéro de téléphone :</label>
+        <input type="tel" id="telephone" name="telephone" required>
+
+        <!-- Informations sur le véhicule -->
+        <label for="marque">Marque du véhicule :</label>
+        <input type="text" id="marque" name="marque" required>
+
+        <label for="modele">Modèle du véhicule :</label>
+        <input type="text" id="modele" name="modele" required>
+
+        <label for="annee">Année de mise en circulation :</label>
+        <input type="number" id="annee" name="annee" required>
+
+        <label for="kilometrage">Kilométrage actuel :</label>
+        <input type="number" id="kilometrage" name="kilometrage" required>
+
+        <label for="etat">État du véhicule :</label>
+        <textarea id="etat" name="etat" rows="4" required></textarea>
+
+        <label for="accidents">Avez-vous eu des accidents ?</label>
+        <select id="accidents" name="accidents">
+            <option value="oui">Oui</option>
+            <option value="non">Non</option>
+        </select>
+
+        <label for="prix">Prix souhaité pour la reprise :</label>
+        <input type="number" id="prix" name="prix" required>
+
+        <!-- Consentement -->
+        <label>
+            <input type="checkbox" name="consentement" required> J'accepte les conditions de reprise de voiture
+        </label>
+
+        <input type="submit" value="Envoyer la demande">
+    </form>
+</div>
   <!-- bas de page-->
   <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
