--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <title>MotorHouse</title>
 </head>
 <body>
-<img id="logo" href="images/logoPNG.PNG">
+
 <nav>
   <ul>
+    <img id="logo" src="images/logoPNG.PNG">
     <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
     <li><a href="pages/nos_reprises.html">Reprises</a></li>
     <li><a href="pages/nos_occasions.html">Nos occassions</a></li>
