--- a/pages/notre_concession.html
+++ b/pages/notre_concession.html
@@ -21,6 +21,21 @@
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
   </nav>
+  <!-- Incrustation OpenStreetMap -->
+<section>
+  <h2>Où nous trouver ?</h2>
+  <div class="map-container">
+    <iframe 
+      src="https://www.openstreetmap.org/export/embed.html?bbox=3.3081626892089844%2C43.623497494798736%2C3.3143064975738525%2C43.62648530287489&layer=mapnik" 
+      width="600" 
+      height="450" 
+      frameborder="0" 
+      style="border:0;" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</section>
+
   <!-- bas de page-->
 <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
