--- a/pages/notre_concession.html
+++ b/pages/notre_concession.html
@@ -21,12 +21,12 @@
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
   </nav>
-  <!-- Incrustation OpenStreetMap -->
+ <!-- Incrustation OpenStreetMap avec marqueur -->
 <section>
   <h2>Où nous trouver ?</h2>
   <div class="map-container">
     <iframe 
-      src="https://www.openstreetmap.org/export/embed.html?bbox=3.3081626892089844%2C43.623497494798736%2C3.3143064975738525%2C43.62648530287489&layer=mapnik" 
+      src="https://www.openstreetmap.org/export/embed.html?bbox=1.4782028198242188%2C43.57731433724219%2C1.4887151718139648%2C43.582314370457535&layer=mapnik&marker=43.5798,1.4835" 
       width="600" 
       height="450" 
       frameborder="0" 
@@ -36,7 +36,6 @@
   </div>
 </section>
 
-  <!-- bas de page-->
 <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
     <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
