--- a/pages/notre_concession.html
+++ b/pages/notre_concession.html
@@ -26,13 +26,13 @@
   <h2>Où nous trouver ?</h2>
   <div class="map-container">
     <iframe 
-      src="https://www.openstreetmap.org/export/embed.html?bbox=1.4782028198242188%2C43.57731433724219%2C1.4887151718139648%2C43.582314370457535&layer=mapnik&marker=43.5798,1.4835" 
+      src="https://www.openstreetmap.org/export/embed.html?bbox=1.489972%2C43.623667%2C1.500000%2C43.624667&layer=mapnik&marker=43.624167,1.494972" 
       width="600" 
       height="450" 
       frameborder="0" 
       style="border:0;" 
       allowfullscreen>
-    </iframe>
+</iframe>
   </div>
 </section>
 
