--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -14,13 +14,13 @@
 <body>
   <nav>
     <ul>
+      <img id="logo" src="images/logoPNG.PNG">
       <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
       <li><a href="nos_reprises.html">Reprises</a></li>
       <li><a href="nos_occasions.html">Nos occassions</a></li>
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
   </nav>
-  <p>Page occassions</p>
   <!-- bas de page-->
   <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
