--- a/pages/nos_reprises.html
+++ b/pages/nos_reprises.html
@@ -7,7 +7,17 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-  <script src="script.js"></script>
+  <script>
+    function afficherConfirmation(event) {
+      event.preventDefault();  // Empêche l'envoi du formulaire par défaut
+      let email = document.getElementById("email").value;
+      // Afficher la page de confirmation
+      document.querySelector(".container").innerHTML = `
+        <h2>Merci pour votre demande !</h2>
+        <p>Une réponse à votre formulaire sera envoyée à l'adresse : ${email}</p>
+      `;
+    }
+  </script>
   <link rel="stylesheet" href="../css/css_reprises.css">
   <title>MotorHouse</title>
 </head>
@@ -20,55 +30,66 @@
       <li><a href="nos_occasions.html">Nos occassions</a></li>
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
-  </nav> 
+  </nav>
 
-
-</div><div class="container">
+  <div class="container">
     <h2>Formulaire de reprise de voiture</h2>
-    <form action="#" method="POST">
+    <form action="#" method="POST" onsubmit="afficherConfirmation(event)">
         <!-- Informations du propriétaire -->
         <label for="nom">Nom et Prénom :</label>
         <input type="text" id="nom" name="nom" required>
+        <br>
 
         <label for="email">Adresse e-mail :</label>
         <input type="email" id="email" name="email" required>
+        <br>
 
         <label for="telephone">Numéro de téléphone :</label>
         <input type="tel" id="telephone" name="telephone" required>
+        <br>
 
         <!-- Informations sur le véhicule -->
         <label for="marque">Marque du véhicule :</label>
         <input type="text" id="marque" name="marque" required>
+        <br>
 
         <label for="modele">Modèle du véhicule :</label>
         <input type="text" id="modele" name="modele" required>
+        <br>
 
         <label for="annee">Année de mise en circulation :</label>
         <input type="number" id="annee" name="annee" required>
+        <br>
 
         <label for="kilometrage">Kilométrage actuel :</label>
         <input type="number" id="kilometrage" name="kilometrage" required>
+        <br>
 
         <label for="etat">État du véhicule :</label>
         <textarea id="etat" name="etat" rows="4" required></textarea>
+        <br>
 
         <label for="accidents">Avez-vous eu des accidents ?</label>
         <select id="accidents" name="accidents">
             <option value="oui">Oui</option>
             <option value="non">Non</option>
         </select>
+        <br>
 
         <label for="prix">Prix souhaité pour la reprise :</label>
         <input type="number" id="prix" name="prix" required>
+        <br>
 
         <!-- Consentement -->
         <label>
             <input type="checkbox" name="consentement" required> J'accepte les conditions de reprise de voiture
         </label>
+        <br>
 
         <input type="submit" value="Envoyer la demande">
     </form>
-</div>
+  </div>
+
   <!-- bas de page-->
   <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
@@ -81,5 +102,4 @@
     </div>
   </footer>
 </body>
-
 </html>
