--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -29,7 +29,7 @@
     <div class="socials">
       <a href="https://facebook.com">Facebook</a>
       <a href="https://twitter.com">Twitter</a>
-      <p id="mention">Mentions légales</p>
+      <a href="nos_mentions.html">Mentions légales</a>
     </div>
   </footer>
 </body>
