--- a/pages/nos_mentions.html
+++ b/pages/nos_mentions.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <script src="script.js"></script>
-  <link rel="stylesheet" href="../css/css_concession.css">
+  <link rel="stylesheet" href="../css/css_occasions.css">
   <title>MotorHouse</title>
 </head>
 <body>
@@ -21,30 +21,8 @@
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
   </nav>
- <!-- Incrustation OpenStreetMap avec marqueur -->
-<section>
-  <h2>Où nous trouver ?</h2>
-  <div class="map-container">
-    <iframe 
-      src="https://www.openstreetmap.org/export/embed.html?bbox=1.489972%2C43.623667%2C1.500000%2C43.624667&layer=mapnik&marker=43.624167,1.494972" 
-      width="600" 
-      height="450" 
-      frameborder="0" 
-      style="border:0;" 
-      allowfullscreen>
-</iframe>
-  </div>
-</section>
+  <!-- bas de page-->
+<h1>Nos mentions légales: </h1>
 
-<footer>
-    <p>© 2025 Concessionnaire MOTORHOUSE</p>
-    <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
-    <p>Téléphone: 01 23 45 67 89</p>
-    <div class="socials">
-      <a href="https://facebook.com">Facebook</a>
-      <a href="https://twitter.com">Twitter</a>
-      <a href="nos_mentions.html">Mentions légales</a>
-    </div>
-  </footer>
 </body>
 </html>
