--- a/pages/nos_reprises.html
+++ b/pages/nos_reprises.html
@@ -24,7 +24,7 @@
 <body>
   <nav>
     <ul>
-      <img id="logo" src="images/logoPNG.PNG">
+      <img id="logo" src="../images/logoPNG.PNG">
       <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
       <li><a href="nos_reprises.html">Reprises</a></li>
       <li><a href="nos_occasions.html">Nos occassions</a></li>
