--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="socials">
       <a href="https://facebook.com">Facebook</a>
       <a href="https://twitter.com">Twitter</a>
-      <a href="nos_mentions.html">Mentions légales</a>
+      <a href="pages/nos_mentions.html">Mentions légales</a>
     </div>
   </footer>
 
