--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -21,6 +21,11 @@
       <li><a href="notre_concession.html">Notre concession</a></li>
     </ul>
   </nav>
+  <h1>Les voitures du moment : </h1>
+  <p id="voiture1">BMW Serie 5 G60</p>
+  <p id="voiture1">62800km au compteur</p>
+  <p id="voiture1">à partir de 75.000€</p>
+  <img id="voiture1" src="../images/Bmw_Serie_5_G60.PNG">
   <!-- bas de page-->
   <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
