--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -22,10 +22,28 @@
     </ul>
   </nav>
   <h1>Les voitures du moment : </h1>
-  <p id="voiture1">BMW Serie 5 G60</p>
-  <p id="voiture1">2020</p>
-  <p id="voiture1">Electrique</p>
-  <p id="voiture1">à partir de 75.000€</p>
+  <div class="voiture1">
+    <img id="logo" src="../images/bmwexterieur.PNG">
+    <p class="voiture1-detail">BMW Serie 5 G60</p>
+    <p class="voiture1-detail">2020</p>
+    <p class="voiture1-detail">Electrique</p>
+    <p class="voiture1-detail">À partir de 75.000€</p>
+  </div>
+  <div class="voiture2">
+    <img id="logo" src="../images/mercedes-amg-gt-coupe.PNG">
+    <p class="voiture2-detail">Mercedes AMG GT COUPE</p>
+    <p class="voiture2-detail">2024</p>
+    <p class="voiture2-detail">Electrique</p>
+    <p class="voiture2-detail">À partir de 185.000€</p>
+  </div>
+  <div class="voiture3">
+    <img id="logo" src="../images/audi_RS6.PNG">
+    <p class="voiture3-detail">Audi RS6 ABT</p>
+    <p class="voiture3-detail">2024</p>
+    <p class="voiture3-detail">Diesel</p>
+    <p class="voiture3-detail">À partir de 200.000€</p>
+  </div>
+  
   <!-- bas de page-->
   <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
