--- a/pages/notre_concession.html
+++ b/pages/notre_concession.html
@@ -35,7 +35,15 @@
 </iframe>
   </div>
 </section>
+<p>Bienvenue chez MotorHouse, votre concession automobile de confiance !
 
+MotorHouse est bien plus qu’une simple concession, c’est une véritable référence dans le monde de l’automobile. Située au cœur de Vidahillan, notre équipe passionnée et professionnelle vous accueille pour vous offrir une expérience unique dans l'achat, la reprise et la vente de véhicules neufs et d'occasion.
+
+Nous mettons un point d'honneur à vous proposer une large sélection de voitures de qualité, des modèles récents, performants et adaptés à vos besoins. Que vous soyez à la recherche d'un véhicule spacieux pour votre famille, d'une voiture sportive pour les amateurs de conduite ou d'une citadine pratique pour vos trajets quotidiens, MotorHouse a ce qu'il vous faut.
+
+Notre expertise ne s'arrête pas à la vente. Nous vous offrons également des services de reprise de voiture, d'entretien et de financement, tout cela dans un cadre moderne et accueillant. Chez MotorHouse, votre satisfaction est notre priorité. Nous sommes à l’écoute de vos attentes et nous vous conseillons en toute transparence pour que vous puissiez faire un choix éclairé.
+
+Nous vous invitons à venir découvrir notre concession, essayer nos véhicules et profiter de nos offres exceptionnelles. À bientôt chez MotorHouse, où l'excellence automobile rencontre le service personnalisé.</p>
 <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
     <p>Adresse: 13 Rue Alex Jany, Vidahillan</p>
