--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -23,21 +23,21 @@
   </nav>
   <h1>Les voitures du moment : </h1>
   <div class="voiture1">
-    <img id="logo" src="../images/bmwexterieur.PNG">
+    <img src="../images/bmwexterieur.PNG">
     <p class="voiture1-detail">BMW Serie 5 G60</p>
     <p class="voiture1-detail">2020</p>
     <p class="voiture1-detail">Electrique</p>
     <p class="voiture1-detail">À partir de 75.000€</p>
   </div>
   <div class="voiture2">
-    <img id="logo" src="../images/mercedes-amg-gt-coupe.PNG">
+    <img src="../images/mercedes-amg-gt-coupe.PNG">
     <p class="voiture2-detail">Mercedes AMG GT COUPE</p>
     <p class="voiture2-detail">2024</p>
     <p class="voiture2-detail">Electrique</p>
     <p class="voiture2-detail">À partir de 185.000€</p>
   </div>
   <div class="voiture3">
-    <img id="logo" src="../images/audi_RS6.PNG">
+    <img src="../images/audi_RS6.PNG">
     <p class="voiture3-detail">Audi RS6 ABT</p>
     <p class="voiture3-detail">2024</p>
     <p class="voiture3-detail">Diesel</p>
