--- a/pages/notre_concession.html
+++ b/pages/notre_concession.html
@@ -35,7 +35,7 @@
 </iframe>
   </div>
 </section>
-<p>Bienvenue chez MotorHouse, votre concession automobile de confiance !
+<p id="texte">Bienvenue chez MotorHouse, votre concession automobile de confiance !
 
 MotorHouse est bien plus qu’une simple concession, c’est une véritable référence dans le monde de l’automobile. Située au cœur de Vidahillan, notre équipe passionnée et professionnelle vous accueille pour vous offrir une expérience unique dans l'achat, la reprise et la vente de véhicules neufs et d'occasion.
 
