--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -28,6 +28,10 @@
     <p class="voiture1-detail">2020</p>
     <p class="voiture1-detail">Electrique</p>
     <p class="voiture1-detail">À partir de 75.000€</p>
+    <audio controls>
+      <source src="../sons/bmw.mp3" type="audio/mp3">
+      Ton navigateur ne supporte pas l'élément audio.
+    </audio>
   </div>
   <div class="voiture2">
     <img src="../images/mercedes-amg-gt-coupe.PNG">
@@ -35,6 +39,10 @@
     <p class="voiture2-detail">2024</p>
     <p class="voiture2-detail">Electrique</p>
     <p class="voiture2-detail">À partir de 185.000€</p>
+    <audio controls>
+      <source src="../sons/mercedes.mp3" type="audio/mp3">
+      Ton navigateur ne supporte pas l'élément audio.
+    </audio>
   </div>
   <div class="voiture3">
     <img src="../images/audi_RS6.PNG">
@@ -42,6 +50,10 @@
     <p class="voiture3-detail">2024</p>
     <p class="voiture3-detail">Diesel</p>
     <p class="voiture3-detail">À partir de 200.000€</p>
+    <audio controls>
+      <source src="../sons/rs6.mp3" type="audio/mp3">
+      Ton navigateur ne supporte pas l'élément audio.
+    </audio>
   </div>
   
   <!-- bas de page-->
