--- a/pages/nos_mentions.html
+++ b/pages/nos_mentions.html
@@ -23,7 +23,39 @@
   </nav>
   <!-- bas de page-->
 <h1>Nos mentions légales : </h1>
-<p id="mention">Mettre les mentions</p>
+<p id="mention"><!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mentions Légales - MotorHouse</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="mentions-legales">
+        <h1>Mentions légales</h1>
+        
+        <p><strong>1. Propriété du site</strong><br>
+        Le site web <strong>MotorHouse</strong> est la propriété de la société MotorHouse, immatriculée sous le numéro SIRET XXXXXXXX, dont le siège social est situé au 13 Rue Alex Jany, Vidahillan, France. Tous droits réservés.</p>
+
+        <p><strong>2. Utilisation des photos de marques</strong><br>
+        Ce site utilise des images représentant des véhicules des marques Mercedes, Audi et BMW. Ces images sont utilisées à titre illustratif uniquement et ne sont pas destinées à suggérer un partenariat officiel ou une association avec ces marques. MotorHouse ne revendique aucun droit de propriété sur les logos, marques ou modèles déposés de Mercedes, Audi et BMW.</p>
+        
+        <p><strong>3. Propriété intellectuelle</strong><br>
+        Le contenu du site, y compris les textes, images, graphiques, logos, vidéos et autres éléments, est protégé par le droit d'auteur et la propriété intellectuelle. Toute reproduction, distribution ou utilisation sans autorisation préalable est strictement interdite.</p>
+
+        <p><strong>4. Limitation de responsabilité</strong><br>
+        MotorHouse s'efforce de fournir des informations exactes et mises à jour sur ce site. Toutefois, nous ne pouvons garantir l'exactitude, l'exhaustivité ou la mise à jour des informations, et ne saurions être tenus responsables des erreurs ou omissions. L'utilisation du site se fait sous votre seule responsabilité.</p>
+
+        <p><strong>5. Contact</strong><br>
+        Pour toute question concernant ces mentions légales ou l'utilisation du site, veuillez nous contacter à l'adresse suivante : <a href="mailto:contact@motorhouse.com">contact@motorhouse.com</a></p>
+
+        <p><strong>6. Loi applicable</strong><br>
+        Ces mentions légales sont régies par le droit français. En cas de litige, les tribunaux français seront compétents.</p>
+    </div>
+</body>
+</html>
+</p>
 
 </body>
 </html>
