--- a/pages/nos_occasions.html
+++ b/pages/nos_occasions.html
@@ -28,6 +28,7 @@
     <p class="voiture1-detail">2020</p>
     <p class="voiture1-detail">Electrique</p>
     <p class="voiture1-detail">À partir de 75.000€</p>
+    <p class="voiture1-detail">Testez le son de la voiture en ligne : </p>
     <audio controls>
       <source src="../sons/bmw.mp3" type="audio/mp3">
       Ton navigateur ne supporte pas l'élément audio.
@@ -39,6 +40,7 @@
     <p class="voiture2-detail">2024</p>
     <p class="voiture2-detail">Electrique</p>
     <p class="voiture2-detail">À partir de 185.000€</p>
+    <p class="voiture2-detail">Testez le son de la voiture en ligne : </p>
     <audio controls>
       <source src="../sons/mercedes.mp3" type="audio/mp3">
       Ton navigateur ne supporte pas l'élément audio.
@@ -50,6 +52,7 @@
     <p class="voiture3-detail">2024</p>
     <p class="voiture3-detail">Diesel</p>
     <p class="voiture3-detail">À partir de 200.000€</p>
+    <p class="voiture3-detail">Testez le son de la voiture en ligne : </p>
     <audio controls>
       <source src="../sons/rs6.mp3" type="audio/mp3">
       Ton navigateur ne supporte pas l'élément audio.
