--- a/pages/nos_mentions.html
+++ b/pages/nos_mentions.html
@@ -35,23 +35,22 @@
     <div class="mentions-legales">
         <h1>Mentions légales</h1>
         
-        <p><strong>1. Propriété du site</strong><br>
-        Le site web <strong>MotorHouse</strong> est la propriété de la société MotorHouse, immatriculée sous le numéro SIRET XXXXXXXX, dont le siège social est situé au 13 Rue Alex Jany, Vidahillan, France. Tous droits réservés.</p>
+    <h2>1. Propriété intellectuelle</h2>
+    <p><strong>Tous les contenus présents sur le Site, y compris mais sans s'y limiter, les images, photos, logos, textes, marques et autres éléments graphiques, sont la propriété exclusive de MotorHouse ou sont utilisés avec l'autorisation des détenteurs de droits.</strong></p>
+    <p><strong>Les photos des véhicules, notamment des marques BMW, Mercedes et Audi, sont des images à titre illustratif. Ces marques sont des marques déposées de leurs propriétaires respectifs. MotorHouse n'est en aucun cas affilié aux marques BMW, Mercedes, ou Audi, et n'a pas l'intention de revendiquer la propriété de ces marques.</strong></p>
+    <p><strong>Toute reproduction, utilisation, modification ou distribution de ces éléments sans autorisation est interdite.</strong></p>
 
-        <p><strong>2. Utilisation des photos de marques</strong><br>
-        Ce site utilise des images représentant des véhicules des marques Mercedes, Audi et BMW. Ces images sont utilisées à titre illustratif uniquement et ne sont pas destinées à suggérer un partenariat officiel ou une association avec ces marques. MotorHouse ne revendique aucun droit de propriété sur les logos, marques ou modèles déposés de Mercedes, Audi et BMW.</p>
-        
-        <p><strong>3. Propriété intellectuelle</strong><br>
-        Le contenu du site, y compris les textes, images, graphiques, logos, vidéos et autres éléments, est protégé par le droit d'auteur et la propriété intellectuelle. Toute reproduction, distribution ou utilisation sans autorisation préalable est strictement interdite.</p>
+    <h2>2. Protection des données personnelles</h2>
+    <p><strong>Les informations personnelles collectées via le formulaire de contact ou autres services en ligne sont traitées avec la plus grande confidentialité. Conformément à la réglementation en vigueur (RGPD), vous disposez d’un droit d’accès, de rectification et de suppression de vos données personnelles. Pour plus d'informations, veuillez consulter notre politique de confidentialité.</strong></p>
 
-        <p><strong>4. Limitation de responsabilité</strong><br>
-        MotorHouse s'efforce de fournir des informations exactes et mises à jour sur ce site. Toutefois, nous ne pouvons garantir l'exactitude, l'exhaustivité ou la mise à jour des informations, et ne saurions être tenus responsables des erreurs ou omissions. L'utilisation du site se fait sous votre seule responsabilité.</p>
+    <h2>3. Responsabilité</h2>
+    <p><strong>MotorHouse s’efforce d’assurer l'exactitude des informations présentes sur le Site, mais ne peut être tenu responsable des erreurs ou omissions qui pourraient y figurer. L'entreprise décline toute responsabilité en cas d'indisponibilité du site ou de dommages directs ou indirects liés à son utilisation.</strong></p>
 
-        <p><strong>5. Contact</strong><br>
-        Pour toute question concernant ces mentions légales ou l'utilisation du site, veuillez nous contacter à l'adresse suivante : <a href="mailto:contact@motorhouse.com">contact@motorhouse.com</a></p>
+    <h2>4. Liens externes</h2>
+    <p><strong>Le Site peut contenir des liens vers des sites externes. MotorHouse n’assume aucune responsabilité quant au contenu de ces sites.</strong></p>
 
-        <p><strong>6. Loi applicable</strong><br>
-        Ces mentions légales sont régies par le droit français. En cas de litige, les tribunaux français seront compétents.</p>
+    <h2>5. Modifications des mentions légales</h2>
+    <p><strong>MotorHouse se réserve le droit de modifier les présentes mentions légales à tout moment. Toute modification sera immédiatement applicable à compter de sa publication sur cette page.</strong></p>
     </div>
 </body>
 </html>
