--- a/pages/nos_mentions.html
+++ b/pages/nos_mentions.html
@@ -15,7 +15,7 @@
   <nav>
     <ul>
       <img id="logo" src="../images/logoPNG.PNG">
-      <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
+      <li><a href="../index.html">Accueil</a></li>
       <li><a href="nos_reprises.html">Reprises</a></li>
       <li><a href="nos_occasions.html">Nos occassions</a></li>
       <li><a href="notre_concession.html">Notre concession</a></li>
@@ -52,9 +52,5 @@
     <h2>5. Modifications des mentions légales</h2>
     <p><strong>MotorHouse se réserve le droit de modifier les présentes mentions légales à tout moment. Toute modification sera immédiatement applicable à compter de sa publication sur cette page.</strong></p>
     </div>
-</body>
-</html>
-</p>
-
 </body>
 </html>
