--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <nav>
   <ul>
     <img id="logo" src="images/logoPNG.PNG">
-    <li><a href="https://stackfy.github.io/sitehtml/">Accueil</a></li>
+    <li><a href="../index.html">Accueil</a></li>
     <li><a href="pages/nos_reprises.html">Reprises</a></li>
     <li><a href="pages/nos_occasions.html">Nos occassions</a></li>
     <li><a href="pages/notre_concession.html">Notre concession</a></li>
