--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </nav>
 
 <img src="images/concessionaire.jpg"/>
-
+<div id="hours-status"></div>
   <!-- bas de page-->
   <footer>
     <p>© 2025 Concessionnaire MOTORHOUSE</p>
