--- a/index.html
+++ b/index.html
@@ -21,22 +21,24 @@
     <li><a href="pages/nos_occasions.html">Nos occassions</a></li>
     <li><a href="pages/notre_concession.html">Notre concession</a></li>
   </ul>
-  
 </nav>
 
 <img src="images/concessionaire.jpg"/>
+
+<!-- L'élément où le message des horaires sera affiché -->
 <div id="hours-status"></div>
-  <!-- bas de page-->
-  <footer>
-    <p>© 2025 Concessionnaire MOTORHOUSE</p>
-    <p>Adresse: 13 Rue Alex Jany, Vidailhan</p>
-    <p>Téléphone: 01 23 45 67 89</p>
-    <div class="socials">
-      <a href="https://facebook.com">Facebook</a>
-      <a href="https://twitter.com">Twitter</a>
-      <a href="pages/nos_mentions.html">Mentions légales</a>
-    </div>
-  </footer>
+
+<!-- bas de page-->
+<footer>
+  <p>© 2025 Concessionnaire MOTORHOUSE</p>
+  <p>Adresse: 13 Rue Alex Jany, Vidailhan</p>
+  <p>Téléphone: 01 23 45 67 89</p>
+  <div class="socials">
+    <a href="https://facebook.com">Facebook</a>
+    <a href="https://twitter.com">Twitter</a>
+    <a href="pages/nos_mentions.html">Mentions légales</a>
+  </div>
+</footer>
 
 </body>
 </html>
