--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </nav>
 
 <h1>Bienvenue sur notre site</h1>
-<div id="hours-status"></div>
+<div id="heures-status"></div>
 
 <img src="images/concessionaire.jpg" alt="Concessionnaire">
 
